# serializer version: 1
# name: test_partner_detailview[<lambda>-partner_detailview as anonymous][partner_detailview as anonymous]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partenaires/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md">
                          
  
      <h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  
  
                      </article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
              
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_partner_detailview[<lambda>-partner_detailview as superuser][partner_detailview as superuser]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partenaires/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                          <a href="/partenaires/best-partner-ever-[PK of Partner]/update/"><small>Mettre à jour</small></a>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md">
                          
  
      <h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  
  
                      </article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
              
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_partner_detailview[<lambda>-partner_detailview][partner_detailview]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partenaires/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md">
                          
  
      <h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  
  
                      </article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
              
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_partner_with_forums[partner_detailview_with_forums]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partenaires/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md">
                          
  
      <h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  
  
                      </article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
              
                  <div class="s-section__row row mt-5">
                      <div class="col-12">
                          <h2>Leurs contributions dans la communauté</h2>
                      </div>
                      <div class="col-12"><div class="container-fluid" id="subforums_area">
      
      <div class="row mt-4" id="documentation-category-subforums">
          
              <div class="col-12 col-md-4 mb-3 mb-md-5">
                  <div class="card c-card has-one-link-inside h-100">
                      
                      <div class="card-body pb-0">
                          <p class="h3 lh-base">Test Forum</p>
                          <div>
      
          <span class="tag bg-info-lighter text-info">sun</span>
      
  
      
          <span class="tag bg-info-lighter text-info">moon</span>
      
  
  </div>
                          <div class="mt-3">Test description</div>
                      </div>
                      <div class="card-footer text-end">
                          <a class="btn btn-sm btn-ico btn-link stretched-link matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="fiches_techniques" href="/forum/test-forum-[PK of Forum]/">
                              <i class="ri-arrow-right-line ri-lg"></i>
                          </a>
                      </div>
                  </div>
              </div>
          
      </div>
  </div>
  </div>
                  </div>
              
          </div>
      </section>
  
              
          </main>
  '''
# ---
